# OpenShell

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  mise.toml
.agent/skills/debug-navigator-cluster/: SKILL.md
.github/workflows/: release-auto-tag.yml  release-tag.yml
architecture/: containers.md  sandbox.md  server-persistence.md  server.md
crates/navigator-bootstrap/src/: docker.rs  lib.rs
crates/navigator-cli/src/: completers.rs  doctor_llm_prompt.md  main.rs  run.rs
crates/navigator-core/: Cargo.toml  build.rs
crates/navigator-core/src/: config.rs
crates/navigator-core/src/proto/: mod.rs
crates/navigator-sandbox/src/: grpc_client.rs  policy.rs  ssh.rs
crates/navigator-sandbox/src/sandbox/linux/: landlock.rs
crates/navigator-server/: Cargo.toml
crates/navigator-server/migrations/postgres/: 001_create_objects.sql
crates/navigator-server/migrations/sqlite/: 001_create_objects.sql
crates/navigator-server/src/: lib.rs  main.rs  multiplex.rs  tls.rs
crates/navigator-server/src/persistence/: mod.rs  postgres.rs  sqlite.rs  tests.rs
crates/navigator-server/tests/: multiplex_integration.rs  multiplex_tls_integration.rs
crates/openshell-policy/src/: lib.rs
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: activity_aggregator.rs  lib.rs  proxy.rs  tether_bridge.rs
crates/openshell-server/: Cargo.toml
crates/openshell-server/src/: lib.rs  main.rs  syslog_export.rs  tracing_bus.rs
deploy/docker/: Dockerfile.ci  Dockerfile.sandbox  Dockerfile.server  cluster-entrypoint.sh
deploy/docker/sandbox/: Dockerfile.base  dev-sandbox-policy.yaml
docker/: Dockerfile.server
e2e/python/: test_sandbox_venv.py
helm/navigator/: values.yaml
helm/navigator/templates/: deployment.yaml
kube/: mise.toml
proto/: datamodel.proto  test.proto
python/navigator/: sandbox.py
tests/sandbox_e2e/: test_sandbox_grpc.py
